Project/abcplayer/src/abc/parser/XyzParser.java
// Generated from Xyz.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XyzParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
    T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, 
    T__16=17, T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, 
    T__23=24, T__24=25, T__25=26, T__26=27, T__27=28, ALPHA=29, PUNCTUATIONS=30, 
    NEWLINE=31, DIGIT=32, WHITESPACE=33;
  public static final int
    RULE_root = 0, RULE_abcHeader = 1, RULE_fieldNumber = 2, RULE_fieldTitle = 3, 
    RULE_otherFields = 4, RULE_fieldComposer = 5, RULE_fieldDefaultLength = 6, 
    RULE_fieldMeter = 7, RULE_fieldTempo = 8, RULE_fieldVoice = 9, RULE_fieldKey = 10, 
    RULE_key = 11, RULE_keynote = 12, RULE_keyAccidental = 13, RULE_modeMinor = 14, 
    RULE_basenote = 15, RULE_meter = 16, RULE_meterFraction = 17, RULE_tempo = 18, 
    RULE_noteLengthStrict = 19, RULE_comment = 20, RULE_endOfLine = 21, 
    RULE_text = 22;
  public static final String[] ruleNames = {
    "root", "abcHeader", "fieldNumber", "fieldTitle", "otherFields", "fieldComposer", 
    "fieldDefaultLength", "fieldMeter", "fieldTempo", "fieldVoice", "fieldKey", 
    "key", "keynote", "keyAccidental", "modeMinor", "basenote", "meter", 
    "meterFraction", "tempo", "noteLengthStrict", "comment", "endOfLine", 
    "text"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'X:'", "'T:'", "'C:'", "'L:'", "'M:'", "'Q:'", "'V:'", "'K:'", 
    "'#'", "'b'", "'m'", "'C'", "'D'", "'E'", "'F'", "'G'", "'A'", "'B'", 
    "'c'", "'d'", "'e'", "'f'", "'g'", "'a'", "'C|'", "'/'", "'='", "'%'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null, 
    null, null, null, null, null, null, null, null, null, null, null, null, 
    null, null, null, null, null, "ALPHA", "PUNCTUATIONS", "NEWLINE", "DIGIT", 
    "WHITESPACE"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "Xyz.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public XyzParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class RootContext extends ParserRuleContext {
    public AbcHeaderContext abcHeader() {
      return getRuleContext(AbcHeaderContext.class,0);
    }
    public TerminalNode EOF() { return getToken(XyzParser.EOF, 0); }
    public RootContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_root; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterRoot(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitRoot(this);
    }
  }

  public final RootContext root() throws RecognitionException {
    RootContext _localctx = new RootContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_root);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(46);
      abcHeader();
      setState(47);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class AbcHeaderContext extends ParserRuleContext {
    public FieldNumberContext fieldNumber() {
      return getRuleContext(FieldNumberContext.class,0);
    }
    public FieldTitleContext fieldTitle() {
      return getRuleContext(FieldTitleContext.class,0);
    }
    public FieldKeyContext fieldKey() {
      return getRuleContext(FieldKeyContext.class,0);
    }
    public List<CommentContext> comment() {
      return getRuleContexts(CommentContext.class);
    }
    public CommentContext comment(int i) {
      return getRuleContext(CommentContext.class,i);
    }
    public List<OtherFieldsContext> otherFields() {
      return getRuleContexts(OtherFieldsContext.class);
    }
    public OtherFieldsContext otherFields(int i) {
      return getRuleContext(OtherFieldsContext.class,i);
    }
    public AbcHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_abcHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterAbcHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitAbcHeader(this);
    }
  }

  public final AbcHeaderContext abcHeader() throws RecognitionException {
    AbcHeaderContext _localctx = new AbcHeaderContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_abcHeader);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(49);
      fieldNumber();
      setState(53);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==T__27) {
        {
        {
        setState(50);
        comment();
        }
        }
        setState(55);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(56);
      fieldTitle();
      setState(60);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__27))) != 0)) {
        {
        {
        setState(57);
        otherFields();
        }
        }
        setState(62);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(63);
      fieldKey();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldNumberContext extends ParserRuleContext {
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public List<TerminalNode> DIGIT() { return getTokens(XyzParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(XyzParser.DIGIT, i);
    }
    public FieldNumberContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldNumber; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldNumber(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldNumber(this);
    }
  }

  public final FieldNumberContext fieldNumber() throws RecognitionException {
    FieldNumberContext _localctx = new FieldNumberContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_fieldNumber);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(65);
      match(T__0);
      setState(67); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(66);
        match(DIGIT);
        }
        }
        setState(69); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      setState(71);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldTitleContext extends ParserRuleContext {
    public TextContext text() {
      return getRuleContext(TextContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldTitleContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldTitle; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldTitle(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldTitle(this);
    }
  }

  public final FieldTitleContext fieldTitle() throws RecognitionException {
    FieldTitleContext _localctx = new FieldTitleContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_fieldTitle);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(73);
      match(T__1);
      setState(74);
      text();
      setState(75);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class OtherFieldsContext extends ParserRuleContext {
    public FieldComposerContext fieldComposer() {
      return getRuleContext(FieldComposerContext.class,0);
    }
    public FieldDefaultLengthContext fieldDefaultLength() {
      return getRuleContext(FieldDefaultLengthContext.class,0);
    }
    public FieldMeterContext fieldMeter() {
      return getRuleContext(FieldMeterContext.class,0);
    }
    public FieldTempoContext fieldTempo() {
      return getRuleContext(FieldTempoContext.class,0);
    }
    public FieldVoiceContext fieldVoice() {
      return getRuleContext(FieldVoiceContext.class,0);
    }
    public CommentContext comment() {
      return getRuleContext(CommentContext.class,0);
    }
    public OtherFieldsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_otherFields; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterOtherFields(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitOtherFields(this);
    }
  }

  public final OtherFieldsContext otherFields() throws RecognitionException {
    OtherFieldsContext _localctx = new OtherFieldsContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_otherFields);
    try {
      setState(83);
      switch (_input.LA(1)) {
      case T__2:
        enterOuterAlt(_localctx, 1);
        {
        setState(77);
        fieldComposer();
        }
        break;
      case T__3:
        enterOuterAlt(_localctx, 2);
        {
        setState(78);
        fieldDefaultLength();
        }
        break;
      case T__4:
        enterOuterAlt(_localctx, 3);
        {
        setState(79);
        fieldMeter();
        }
        break;
      case T__5:
        enterOuterAlt(_localctx, 4);
        {
        setState(80);
        fieldTempo();
        }
        break;
      case T__6:
        enterOuterAlt(_localctx, 5);
        {
        setState(81);
        fieldVoice();
        }
        break;
      case T__27:
        enterOuterAlt(_localctx, 6);
        {
        setState(82);
        comment();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldComposerContext extends ParserRuleContext {
    public TextContext text() {
      return getRuleContext(TextContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldComposerContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldComposer; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldComposer(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldComposer(this);
    }
  }

  public final FieldComposerContext fieldComposer() throws RecognitionException {
    FieldComposerContext _localctx = new FieldComposerContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_fieldComposer);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(85);
      match(T__2);
      setState(86);
      text();
      setState(87);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldDefaultLengthContext extends ParserRuleContext {
    public NoteLengthStrictContext noteLengthStrict() {
      return getRuleContext(NoteLengthStrictContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldDefaultLengthContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldDefaultLength; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldDefaultLength(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldDefaultLength(this);
    }
  }

  public final FieldDefaultLengthContext fieldDefaultLength() throws RecognitionException {
    FieldDefaultLengthContext _localctx = new FieldDefaultLengthContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_fieldDefaultLength);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(89);
      match(T__3);
      setState(90);
      noteLengthStrict();
      setState(91);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldMeterContext extends ParserRuleContext {
    public MeterContext meter() {
      return getRuleContext(MeterContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldMeterContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldMeter; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldMeter(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldMeter(this);
    }
  }

  public final FieldMeterContext fieldMeter() throws RecognitionException {
    FieldMeterContext _localctx = new FieldMeterContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_fieldMeter);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(93);
      match(T__4);
      setState(94);
      meter();
      setState(95);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldTempoContext extends ParserRuleContext {
    public TempoContext tempo() {
      return getRuleContext(TempoContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldTempoContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldTempo; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldTempo(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldTempo(this);
    }
  }

  public final FieldTempoContext fieldTempo() throws RecognitionException {
    FieldTempoContext _localctx = new FieldTempoContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_fieldTempo);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(97);
      match(T__5);
      setState(98);
      tempo();
      setState(99);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldVoiceContext extends ParserRuleContext {
    public TextContext text() {
      return getRuleContext(TextContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldVoiceContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldVoice; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldVoice(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldVoice(this);
    }
  }

  public final FieldVoiceContext fieldVoice() throws RecognitionException {
    FieldVoiceContext _localctx = new FieldVoiceContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_fieldVoice);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(101);
      match(T__6);
      setState(102);
      text();
      setState(103);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldKeyContext extends ParserRuleContext {
    public KeyContext key() {
      return getRuleContext(KeyContext.class,0);
    }
    public EndOfLineContext endOfLine() {
      return getRuleContext(EndOfLineContext.class,0);
    }
    public FieldKeyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_fieldKey; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterFieldKey(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitFieldKey(this);
    }
  }

  public final FieldKeyContext fieldKey() throws RecognitionException {
    FieldKeyContext _localctx = new FieldKeyContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_fieldKey);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(105);
      match(T__7);
      setState(106);
      key();
      setState(107);
      endOfLine();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class KeyContext extends ParserRuleContext {
    public KeynoteContext keynote() {
      return getRuleContext(KeynoteContext.class,0);
    }
    public ModeMinorContext modeMinor() {
      return getRuleContext(ModeMinorContext.class,0);
    }
    public KeyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_key; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterKey(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitKey(this);
    }
  }

  public final KeyContext key() throws RecognitionException {
    KeyContext _localctx = new KeyContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_key);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(109);
      keynote();
      setState(111);
      _la = _input.LA(1);
      if (_la==T__10) {
        {
        setState(110);
        modeMinor();
        }
      }

      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class KeynoteContext extends ParserRuleContext {
    public BasenoteContext basenote() {
      return getRuleContext(BasenoteContext.class,0);
    }
    public KeyAccidentalContext keyAccidental() {
      return getRuleContext(KeyAccidentalContext.class,0);
    }
    public KeynoteContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_keynote; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterKeynote(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitKeynote(this);
    }
  }

  public final KeynoteContext keynote() throws RecognitionException {
    KeynoteContext _localctx = new KeynoteContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_keynote);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(113);
      basenote();
      setState(115);
      _la = _input.LA(1);
      if (_la==T__8 || _la==T__9) {
        {
        setState(114);
        keyAccidental();
        }
      }

      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class KeyAccidentalContext extends ParserRuleContext {
    public KeyAccidentalContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_keyAccidental; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterKeyAccidental(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitKeyAccidental(this);
    }
  }

  public final KeyAccidentalContext keyAccidental() throws RecognitionException {
    KeyAccidentalContext _localctx = new KeyAccidentalContext(_ctx, getState());
    enterRule(_localctx, 26, RULE_keyAccidental);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(117);
      _la = _input.LA(1);
      if ( !(_la==T__8 || _la==T__9) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ModeMinorContext extends ParserRuleContext {
    public ModeMinorContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_modeMinor; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterModeMinor(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitModeMinor(this);
    }
  }

  public final ModeMinorContext modeMinor() throws RecognitionException {
    ModeMinorContext _localctx = new ModeMinorContext(_ctx, getState());
    enterRule(_localctx, 28, RULE_modeMinor);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(119);
      match(T__10);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BasenoteContext extends ParserRuleContext {
    public BasenoteContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_basenote; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterBasenote(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitBasenote(this);
    }
  }

  public final BasenoteContext basenote() throws RecognitionException {
    BasenoteContext _localctx = new BasenoteContext(_ctx, getState());
    enterRule(_localctx, 30, RULE_basenote);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(121);
      _la = _input.LA(1);
      if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23))) != 0)) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MeterContext extends ParserRuleContext {
    public MeterFractionContext meterFraction() {
      return getRuleContext(MeterFractionContext.class,0);
    }
    public MeterContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_meter; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterMeter(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitMeter(this);
    }
  }

  public final MeterContext meter() throws RecognitionException {
    MeterContext _localctx = new MeterContext(_ctx, getState());
    enterRule(_localctx, 32, RULE_meter);
    try {
      setState(126);
      switch (_input.LA(1)) {
      case T__11:
        enterOuterAlt(_localctx, 1);
        {
        setState(123);
        match(T__11);
        }
        break;
      case T__24:
        enterOuterAlt(_localctx, 2);
        {
        setState(124);
        match(T__24);
        }
        break;
      case DIGIT:
        enterOuterAlt(_localctx, 3);
        {
        setState(125);
        meterFraction();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MeterFractionContext extends ParserRuleContext {
    public List<TerminalNode> DIGIT() { return getTokens(XyzParser.DIGIT); }
    public TerminalNode DIGIT(int i) {
      return getToken(XyzParser.DIGIT, i);
    }
    public MeterFractionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_meterFraction; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).enterMeterFraction(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof XyzListener ) ((XyzListener)listener).exitMeterFraction(this);
    }
  }

  public final MeterFractionContext meterFraction() throws RecognitionException {
    MeterFractionContext _localctx = new MeterFractionContext(_ctx, getState());
    enterRule(_localctx, 34, RULE_meterFraction);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(129); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(128);
        match(DIGIT);
        }
        }
        setState(131); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      setState(133);
      match(T__25);
      setState(135); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(134);
        match(DIGIT);
        }
        }
        setState(137); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( _la==DIGIT );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }
